--- a/table.html
+++ b/table.html
@@ -86,12 +86,9 @@
       </div>
       <div>
         <label for="searchDevice">デバイスタイプ（機種）:</label>
-        <input type="text" id="searchDevice" placeholder="例: iPhone 12" />
+        <input type="text" id="searchDevice" placeholder="例: iPhone" />
       </div>
-      <div>
-        <label for="searchOSBrowser">OS / ブラウザ:</label>
-        <input type="text" id="searchOSBrowser" placeholder="例: iOS / Safari" />
-      </div>
+
       <div>
         <label for="searchStartDate">利用開始(YYYY-MM-DD):</label>
         <input type="date" id="searchStartDate" />
