--- a/table.html
+++ b/table.html
@@ -88,7 +88,10 @@
         <label for="searchDevice">デバイスタイプ（機種）:</label>
         <input type="text" id="searchDevice" placeholder="例: iPhone" />
       </div>
-
+      <div>
+        <label for="searchOSBrowser">OS / ブラウザ:</label>
+        <input type="text" id="searchOSBrowser" placeholder="例: iOS / Safari" />
+      </div>
       <div>
         <label for="searchStartDate">利用開始(YYYY-MM-DD):</label>
         <input type="date" id="searchStartDate" />
@@ -132,7 +135,6 @@
   // グローバル変数でテーブル状態を保持
   let tableStatus = {};
 
-  // --- 省略: テーブル状態のリアルタイム監視部分は変わらず ---
 
   db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
     tableStatus = {};
@@ -248,7 +250,6 @@
     return "Android端末";
   }
 
-  // --- ここから利用履歴表示＋検索処理追加部分 ---
 
   let allLogs = []; // 全ログ保存用
 
@@ -358,4 +359,3 @@
 </script>
 </body>
 </html>
-
