--- a/practice.html
+++ b/practice.html
@@ -1,190 +1,155 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>テーブル管理</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <meta charset="UTF-8">
+  <title>混雑分析</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+    }
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+
+    
+    main {
       padding: 20px;
+      max-width: 1000px;
+      margin: 0 auto;
     }
-    h1 {
-      text-align: center;
+    .filters {
+      margin-bottom: 20px;
     }
-    .table-list, .usage-logs {
+    .chart-container {
+      width: 100%;
+      height: 70vh;
+      overflow-x: auto;
+      background: #fff;
+      border-radius: 10px;
+      padding: 10px;
+    }
+    #details {
       margin-top: 30px;
+      background-color: #f4f4f4;
+      padding: 20px;
+      border-radius: 10px;
     }
     table {
-      border-collapse: collapse;
       width: 100%;
-      margin-bottom: 40px;
+      border-collapse: collapse;
     }
     th, td {
-      border: 1px solid #aaa;
-      padding: 10px;
+      border: 1px solid #ccc;
+      padding: 8px;
       text-align: center;
     }
     th {
-      background-color: #00796b;
-      color: white;
-    }
-    .occupied {
-      background-color: #ffccbc;
-    }
-    .vacant {
-      background-color: #c8e6c9;
+      background-color: #e0e0e0;
     }
   </style>
 </head>
 <body>
-  <h1>テーブル管理画面</h1>
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
+  </header>
 
-  <div class="table-list">
-    <h2>テーブル一覧</h2>
-    <table id="tableStatusTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>状態</th>
-          <th>使用開始時刻</th>
-          <th>利用時間（分）</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
 
-  <div class="usage-logs">
-    <h2>利用履歴</h2>
-    <table id="usageLogsTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>端末ID</th>
-          <th>利用開始</th>
-          <th>利用終了</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  // グローバル変数でテーブル状態を保持
-  let tableStatus = {};
-
-  // テーブル状態のリアルタイム監視と表示更新
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-    tableStatus = {};  // 初期化
-
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      const tableId = data.table;
-      const deviceId = data.device;
-      const timestamp = new Date(data.timestamp);
-      const type = data.type;
-
-      if (!tableStatus[tableId]) {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
-
-      if (type === "enter") {
-        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
-      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
-    });
-
-    const tbody = document.querySelector("#tableStatusTable tbody");
-    tbody.innerHTML = "";
-
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      const tr = document.createElement("tr");
-      tr.dataset.tableId = tableId;
-      tr.className = info.status === "occupied" ? "occupied" : "vacant";
-
-      const duration = info.status === "occupied" && info.startTime
-        ? Math.floor((new Date() - info.startTime) / 60000)
-        : "-";
-
-      tr.innerHTML = `
-        <td>${tableId}</td>
-        <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
-        <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
-        <td class="usage-time">${duration}</td>
-      `;
-      tbody.appendChild(tr);
-    }
-  });
-
-  // 利用時間を1分ごとに更新する関数
-  function updateUsageTime() {
-    const now = new Date();
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      if (info.status === "occupied" && info.startTime) {
-        const duration = Math.floor((now - info.startTime) / 60000);
-        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
-        if (row) {
-          row.querySelector(".usage-time").textContent = duration;
-        }
-      }
-    }
-  }
-
-  setInterval(updateUsageTime, 60000);
-
-  // 利用履歴のリアルタイム表示
-  db.collection("logs").orderBy("timestamp", "desc").limit(100).onSnapshot(snapshot => {
-    const logs = snapshot.docs.map(doc => doc.data()).reverse();
-
-    // startとendを対応付けるmap
-    const usageMap = {}; // key: table_device
-
-    logs.forEach(log => {
-      const key = `${log.table}_${log.device}`;
-      const time = new Date(log.timestamp);
-
-      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
-
-      if (log.type === "enter") {
-        usageMap[key].start = time;
-      } else if (log.type === "exit") {
-        usageMap[key].end = time;
-      }
-    });
-
-    const tbody = document.querySelector("#usageLogsTable tbody");
-    tbody.innerHTML = "";
-
-    Object.values(usageMap)
-      .filter(log => log.start && log.end)
-      .sort((a, b) => b.start - a.start)
-      .forEach(log => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${log.table}</td>
-          <td>${log.device}</td>
-          <td>${log.start.toLocaleString()}</td>
-          <td>${log.end.toLocaleString()}</td>
-        `;
-        tbody.appendChild(tr);
-      });
-  });
-</script>
 </body>
 </html>
