--- a/practice.html
+++ b/practice.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>混雑分析</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>混雑状況</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
@@ -15,34 +14,59 @@
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       color: #2c3e50;
+      overflow-x: hidden;
     }
+
     header {
       background-color: #2c3e50;
       color: white;
+      position: relative;
+      margin-bottom: 0;
+      padding-bottom: 0; 
     }
+
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
     }
+
     .header-title {
       font-size: 1.5em;
       font-weight: bold;
     }
+
     .header-links {
       display: flex;
       gap: 20px;
     }
+
     .header-links a {
       color: white;
       text-decoration: none;
       font-weight: 500;
     }
+
     .header-links a:hover {
       text-decoration: underline;
     }
 
+    .full-width-section {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+
+  background: #e0f7da;
+  padding: 60px 0;
+  text-align: center;
+  margin-top: 0 !important; 
+}
+
+    /* ハンバーガーメニュー */
     .menu-button {
       position: absolute;
       left: 20px;
@@ -91,44 +115,33 @@
       background-color: #2c3e50;
     }
 
-    
     main {
-      padding: 20px;
-      max-width: 1000px;
+      max-width: 800px;
       margin: 0 auto;
+      padding: 30px 20px;
     }
-    .filters {
-      margin-bottom: 20px;
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
     }
-    .chart-container {
-      width: 100%;
-      height: 70vh;
-      overflow-x: auto;
-      background: #fff;
-      border-radius: 10px;
-      padding: 10px;
+
+    p {
+      font-size: 16px;
+      margin: 8px 0;
     }
-    #details {
-      margin-top: 30px;
-      background-color: #f4f4f4;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: center;
-    }
-    th {
-      background-color: #e0e0e0;
+
+    #tables p {
+      font-size: 17px;
     }
   </style>
+
+
 </head>
 <body>
+
   <header>
     <div class="menu-button">
       <span></span>
@@ -139,7 +152,7 @@
       <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
         <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
+        <a href="start.html">ログアウト</a>
       </div>
     </div>
     <div class="drawer">
@@ -149,7 +162,5 @@
       <a href="admin.html">待ち管理</a>
     </div>
   </header>
-
-
 </body>
 </html>
