--- a/practice.html
+++ b/practice.html
@@ -205,10 +205,10 @@
         }
       });
 
-      document.getElementById("count").textContent = entries - exits;
-      document.getElementById("entries").textContent = entries;
-      document.getElementById("exits").textContent = exits;
-      document.getElementById("waitingCount").textContent = waiting;
+      //document.getElementById("count").textContent = entries - exits;
+      //document.getElementById("entries").textContent = entries;
+      //document.getElementById("exits").textContent = exits;
+      //document.getElementById("waitingCount").textContent = waiting;
 
       updateTableDisplays();
     }
