--- a/practice.html
+++ b/practice.html
@@ -147,7 +147,7 @@
 
 
 
- //   function updateTableDisplays() {
+    function updateTableDisplays() {
  //     Object.keys(tableCounts).forEach(tableNum => {
  //       const t = tableCounts[tableNum];
  //       const currentCount = t.enter - t.exit;
@@ -160,7 +160,7 @@
  //         element.textContent = `${status}（${timeText}${elapsed}）`;
 //      }
 //      });
-//    }
+   }
 
     function countVisitors(snapshot) {
       updateTableDisplays();
