--- a/practice.html
+++ b/practice.html
@@ -2,193 +2,468 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>混雑状況</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <title>テーブル管理</title>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <style>
     body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #2c3e50;
-      overflow-x: hidden;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      padding: 20px;
     }
 
     header {
-      background-color: #2c3e50;
-      color: white;
-      position: relative;
-      margin-bottom: 0;
-      padding-bottom: 0; 
-    }
-
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
-    .full-width-section {
-  width: 100vw;
   position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-
-  background: #e0f7da;
-  padding: 60px 0;
-  text-align: center;
-  margin-top: 0 !important; 
+  background-color: #00796b;
+  padding: 10px 20px;
+  color: white;
+  font-weight: bold;
+  user-select: none;
 }
 
-    /* ハンバーガーメニュー */
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
-    }
+.drawer-hidden {
+  display: none;
+}
 
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
+/* ハンバーガーアイコン */
+.drawer-toggle-label {
+  display: inline-block;
+  cursor: pointer;
+  width: 30px;
+  height: 24px;
+  position: relative;
+}
 
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
+.drawer-toggle-label span {
+  display: block;
+  height: 4px;
+  background: white;
+  margin-bottom: 5px;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+/* ドロワーメニュー */
+.drawer-menu {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 220px;
+  height: 100%;
+  background: #004d40;
+  padding-top: 60px;
+  transition: left 0.3s ease;
+  z-index: 1000;
+}
+
+.drawer-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.drawer-menu li {
+  padding: 15px 20px;
+}
+
+.drawer-menu li a {
+  color: white;
+  text-decoration: none;
+  font-weight: normal;
+  display: block;
+}
+
+.drawer-menu li a:hover {
+  background-color: #00695c;
+  border-radius: 4px;
+}
+
+/* チェックボックスがチェックされたらドロワーを表示 */
+.drawer-hidden:checked ~ .drawer-menu {
+  left: 0;
+}
+
+/* ハンバーガーアイコンのアニメーション */
+.drawer-hidden:checked + .drawer-toggle-label span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 8px;
+  position: relative;
+}
+
+.drawer-hidden:checked + .drawer-toggle-label span:nth-child(2) {
+  opacity: 0;
+}
+
+.drawer-hidden:checked + .drawer-toggle-label span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: -8px;
+  position: relative;
+}
+    h1 {
+      text-align: center;
+    }
+    .table-list, .usage-logs {
+      margin-top: 30px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-bottom: 40px;
+    }
+    th, td {
+      border: 1px solid #aaa;
+      padding: 10px;
+      text-align: center;
+    }
+    th {
+      background-color: #00796b;
       color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
     }
-
-    .drawer.open {
-      left: 0;
+    .occupied {
+      background-color: #ffccbc;
     }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
+    .vacant {
+      background-color: #c8e6c9;
     }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-
-    h2 {
-      margin-top: 40px;
+    /* 検索フォームのスタイル */
+    .search-filters {
       margin-bottom: 10px;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 5px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
     }
-
-
+    .search-filters label {
+      font-weight: bold;
+      margin-right: 5px;
+    }
+    .search-filters input {
+      padding: 5px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      min-width: 120px;
+    }
   </style>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    function updateTableDisplays() {
-   }
-
-    function countVisitors(snapshot) {
-      updateTableDisplays();
-    }
-
-    window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-      setInterval(updateTableDisplays, 60000);
-
-      const menuButton = document.querySelector(".menu-button");
-      const drawer = document.querySelector(".drawer");
-      menuButton.addEventListener("click", () => {
-        drawer.classList.toggle("open");
-      });
-    };
-  </script>
 </head>
 <body>
-
-  <header>
-    <div class="menu-button">
+    <header>
+    <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
+    <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
       <span></span>
       <span></span>
       <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="start.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </div>
+    </label>
+    <nav class="drawer-menu">
+      <ul>
+        <li><a href="index.html">ホーム</a></li>
+        <li><a href="map.html">店舗マップ</a></li>
+        <li><a href="histogram.html">混雑履歴</a></li>
+        <li><a href="table_management.html">テーブル管理</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main>
 
-  </main>
 
+    <h1>テーブル管理画面</h1>
+
+
+  <div class="table-list">
+    <h2>テーブル一覧</h2>
+    <table id="tableStatusTable">
+      <thead>
+        <tr>
+          <th>テーブルID</th>
+          <th>状態</th>
+          <th>使用開始時刻</th>
+          <th>利用時間（分）</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <div class="usage-logs">
+    <h2>利用履歴</h2>
+
+    <!-- 検索フォーム追加 -->
+    <div class="search-filters">
+      <div>
+        <label for="searchTableId">テーブルID:</label>
+        <input type="text" id="searchTableId" placeholder="テーブルIDを入力" />
+      </div>
+      <div>
+        <label for="searchDevice">デバイスタイプ（機種）:</label>
+        <input type="text" id="searchDevice" placeholder="例: iPhone" />
+      </div>
+      <div>
+        <label for="searchOSBrowser">OS / ブラウザ:</label>
+        <input type="text" id="searchOSBrowser" placeholder="例: iOS / Safari" />
+      </div>
+      <div>
+        <label for="searchStartDate">利用開始(YYYY-MM-DD):</label>
+        <input type="date" id="searchStartDate" />
+      </div>
+      <div>
+        <label for="searchEndDate">利用終了(YYYY-MM-DD):</label>
+        <input type="date" id="searchEndDate" />
+      </div>
+      <div>
+        <button id="clearFilters">クリア</button>
+      </div>
+    </div>
+
+    <table id="usageLogsTable">
+      <thead>
+        <tr>
+          <th>テーブルID</th>
+          <th>デバイスタイプ（機種）</th>
+          <th>OS / ブラウザ</th>
+          <th>利用開始</th>
+          <th>利用終了</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  // グローバル変数でテーブル状態を保持
+  let tableStatus = {};
+
+
+  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+    tableStatus = {};
+
+    snapshot.forEach(doc => {
+      const data = doc.data();
+      const tableId = data.table;
+      const deviceId = data.device;
+      const timestamp = new Date(data.timestamp);
+      const type = data.type;
+
+      if (!tableStatus[tableId]) {
+        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+      }
+
+      if (type === "enter") {
+        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
+      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
+        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+      }
+    });
+
+    const tbody = document.querySelector("#tableStatusTable tbody");
+    tbody.innerHTML = "";
+
+    for (const [tableId, info] of Object.entries(tableStatus)) {
+      const tr = document.createElement("tr");
+      tr.dataset.tableId = tableId;
+      tr.className = info.status === "occupied" ? "occupied" : "vacant";
+
+      const duration = info.status === "occupied" && info.startTime
+        ? Math.floor((new Date() - info.startTime) / 60000)
+        : "-";
+
+      tr.innerHTML = `
+        <td>${tableId}</td>
+        <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
+        <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
+        <td class="usage-time">${duration}</td>
+      `;
+      tbody.appendChild(tr);
+    }
+  });
+
+  // 利用時間を1分ごとに更新
+  function updateUsageTime() {
+    const now = new Date();
+    for (const [tableId, info] of Object.entries(tableStatus)) {
+      if (info.status === "occupied" && info.startTime) {
+        const duration = Math.floor((now - info.startTime) / 60000);
+        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
+        if (row) {
+          row.querySelector(".usage-time").textContent = duration;
+        }
+      }
+    }
+  }
+  setInterval(updateUsageTime, 60000);
+
+  function parseDeviceInfo(ua) {
+    ua = ua.toLowerCase();
+    let device = "不明";
+    let os = "不明";
+    let browser = "不明";
+
+    if (ua.includes("iphone")) {
+      device = guessIphoneModel(ua);
+      os = "iOS";
+    } else if (ua.includes("ipad")) {
+      device = "iPad";
+      os = "iOS";
+    } else if (ua.includes("android")) {
+      device = guessAndroidModel(ua);
+      os = "Android";
+    } else if (ua.includes("windows")) {
+      device = "Windows PC";
+      os = "Windows";
+    } else if (ua.includes("macintosh")) {
+      device = "Mac";
+      os = "macOS";
+    }
+
+    if (ua.includes("chrome")) {
+      browser = "Chrome";
+    } else if (ua.includes("safari") && !ua.includes("chrome")) {
+      browser = "Safari";
+    } else if (ua.includes("firefox")) {
+      browser = "Firefox";
+    } else if (ua.includes("edg")) {
+      browser = "Edge";
+    }
+
+    return {
+      device,
+      os,
+      browser
+    };
+  }
+
+  function guessIphoneModel(ua) {
+    if (ua.includes("iphone os 16")) return "iPhone 14系";
+    if (ua.includes("iphone os 15")) return "iPhone 13系";
+    if (ua.includes("iphone os 14")) return "iPhone 12系";
+    if (ua.includes("iphone os 13")) return "iPhone 11系";
+    return "iPhone端末";
+  }
+
+  function guessAndroidModel(ua) {
+    const match = ua.match(/android.*build\/([a-z0-9\-]+)/i);
+    if (match && match[1]) {
+      return `Android (${match[1]})`;
+    }
+    return "Android端末";
+  }
+
+
+  let allLogs = []; // 全ログ保存用
+
+  // 検索フォームの各要素を取得
+  const searchTableId = document.getElementById("searchTableId");
+  const searchDevice = document.getElementById("searchDevice");
+  const searchOSBrowser = document.getElementById("searchOSBrowser");
+  const searchStartDate = document.getElementById("searchStartDate");
+  const searchEndDate = document.getElementById("searchEndDate");
+  const clearFilters = document.getElementById("clearFilters");
+
+  function filterAndDisplayLogs() {
+    const tableIdFilter = searchTableId.value.trim().toLowerCase();
+    const deviceFilter = searchDevice.value.trim().toLowerCase();
+    const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
+    const startDateFilter = searchStartDate.value; // yyyy-mm-dd
+    const endDateFilter = searchEndDate.value; // yyyy-mm-dd
+
+    const tbody = document.querySelector("#usageLogsTable tbody");
+    tbody.innerHTML = "";
+
+    // table_deviceごとにまとめるロジックは元と同じ
+    const usageMap = {};
+
+    allLogs.forEach(log => {
+      const key = `${log.table}_${log.device}`;
+      const time = new Date(log.timestamp);
+
+      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
+
+      if (log.type === "enter") {
+        usageMap[key].start = time;
+      } else if (log.type === "exit") {
+        usageMap[key].end = time;
+      }
+    });
+
+    Object.values(usageMap)
+      .filter(log => log.start && log.end)
+      .filter(log => {
+        // テーブルIDフィルター
+        if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
+
+        // デバイスタイプ（機種）フィルター
+        if (deviceFilter) {
+          const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
+          if (!deviceName.includes(deviceFilter)) return false;
+        }
+
+        // OS/ブラウザフィルター
+        if (osBrowserFilter) {
+          const info = parseDeviceInfo(log.device);
+          const osBrowser = (info.os + " / " + info.browser).toLowerCase();
+          if (!osBrowser.includes(osBrowserFilter)) return false;
+        }
+
+        // 利用開始日付フィルター
+        if (startDateFilter) {
+          const startDate = new Date(startDateFilter + "T00:00:00");
+          if (log.start < startDate) return false;
+        }
+
+        // 利用終了日付フィルター
+        if (endDateFilter) {
+          const endDate = new Date(endDateFilter + "T23:59:59");
+          if (log.end > endDate) return false;
+        }
+
+        return true;
+      })
+      .forEach(log => {
+        const tr = document.createElement("tr");
+        const deviceInfo = parseDeviceInfo(log.device);
+        tr.innerHTML = `
+          <td>${log.table}</td>
+          <td>${deviceInfo.device}</td>
+          <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
+          <td>${log.start.toLocaleString()}</td>
+          <td>${log.end.toLocaleString()}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+  }
+
+  clearFilters.addEventListener("click", () => {
+    searchTableId.value = "";
+    searchDevice.value = "";
+    searchOSBrowser.value = "";
+    searchStartDate.value = "";
+    searchEndDate.value = "";
+    filterAndDisplayLogs();
+  });
+
+  [searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
+    input.addEventListener("input", filterAndDisplayLogs);
+  });
+
+  // ログのリアルタイム取得と表示更新
+  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
+    allLogs = [];
+    snapshot.forEach(doc => {
+      allLogs.push(doc.data());
+    });
+    filterAndDisplayLogs();
+  });
+
+</script>
 </body>
 </html>
