--- a/practice.html
+++ b/practice.html
@@ -12,26 +12,24 @@
       padding: 20px;
     }
 
-    header {
+header {
   position: relative;
   background-color: #00796b;
   padding: 10px 20px;
   color: white;
   font-weight: bold;
   user-select: none;
+  display: flex;
+  align-items: center;
 }
 
-.drawer-hidden {
-  display: none;
-}
-
-/* ハンバーガーアイコン */
 .drawer-toggle-label {
   display: inline-block;
   cursor: pointer;
   width: 30px;
   height: 24px;
   position: relative;
+  margin-right: 10px;
 }
 
 .drawer-toggle-label span {
@@ -43,7 +41,6 @@
   transition: 0.3s;
 }
 
-/* ドロワーメニュー */
 .drawer-menu {
   position: fixed;
   top: 0;
@@ -78,12 +75,14 @@
   border-radius: 4px;
 }
 
-/* チェックボックスがチェックされたらドロワーを表示 */
+.drawer-hidden {
+  display: none;
+}
+
 .drawer-hidden:checked ~ .drawer-menu {
   left: 0;
 }
 
-/* ハンバーガーアイコンのアニメーション */
 .drawer-hidden:checked + .drawer-toggle-label span:nth-child(1) {
   transform: rotate(45deg);
   top: 8px;
@@ -99,6 +98,7 @@
   top: -8px;
   position: relative;
 }
+
     h1 {
       text-align: center;
     }
@@ -146,22 +146,24 @@
   </style>
 </head>
 <body>
-    <header>
-    <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
-    <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-    <nav class="drawer-menu">
-      <ul>
-        <li><a href="index.html">ホーム</a></li>
-        <li><a href="map.html">店舗マップ</a></li>
-        <li><a href="histogram.html">混雑履歴</a></li>
-        <li><a href="table_management.html">テーブル管理</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
+  <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+  <h1 style="display:inline-block; margin-left: 20px;">テーブル管理画面</h1>
+  <nav class="drawer-menu">
+    <ul>
+      <li><a href="index.html">ホーム</a></li>
+      <li><a href="map.html">店舗マップ</a></li>
+      <li><a href="histogram.html">混雑履歴</a></li>
+      <li><a href="table_management.html">テーブル管理</a></li>
+    </ul>
+  </nav>
+</header>
+
 
 
 
