--- a/practice.html
+++ b/practice.html
@@ -366,6 +366,24 @@
     filterAndDisplayLogs();
   });
 
+    function updateTableDisplays() {
+   }
+
+    function countVisitors(snapshot) {
+      updateTableDisplays();
+    }
+
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
+
 </script>
 </head>
 <body>
