--- a/practice.html
+++ b/practice.html
@@ -16,17 +16,53 @@
     }
 
     header {
-  position: relative;
-  background-color: #00796b;
-  padding: 10px 20px;
-  color: white;
-  font-weight: bold;
-  user-select: none;
-}
+      background-color: #2c3e50;
+      color: white;
+      position: relative;
+      margin-bottom: 0;
+      padding-bottom: 0; 
+    }
 
-.drawer-hidden {
-  display: none;
-}
+        .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
+
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    .full-width-section {
+      width: 100vw;
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
+
+      background: #e0f7da;
+      padding: 60px 0;
+      text-align: center;
+      margin-top: 0 !important; 
+    }
 
 /* ハンバーガーアイコン */
 .drawer-toggle-label {
