--- a/practice.html
+++ b/practice.html
@@ -497,6 +497,17 @@
     filterAndDisplayLogs();
   });
 
+      window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
+
 </script>
 </body>
 </html>
