--- a/practice.html
+++ b/practice.html
@@ -278,6 +278,9 @@
     </table>
   </div>
 
+
+  <script>
+
   <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import {
