--- a/practice.html
+++ b/practice.html
@@ -294,7 +294,7 @@ import {
     appId: "1:304250341939:web:b8d5b946590d1f852cf146"
   };
 
-  //const app = initializeApp(firebaseConfig);
+  const app = initializeApp(firebaseConfig);
   firebase.initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
